--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -9,3 +9,22 @@ input.form-control { margin-bottom: 5px; }
 /* Immediate child divs should be rows */
 .link-margin { margin: 15px; }
 .link-margin > div { margin: 10px auto 10px auto; }
+
+.sidebar {
+    display: none;
+}
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding: 20px;
+        overflow-x: hidden;
+        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+        background-color: #f5f5f5;
+        border-right: 1px solid #eee;
+    }
+}
