--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -4,27 +4,30 @@ input.form-control { margin-bottom: 5px; }
 /* Customizing the navbar */
 .navbar { background-color: #2b7fc5; }
 .navbar a { color: white!important; }
+.navbar span { color: white!important; }
 
 /* Margin for links */
 /* Immediate child divs should be rows */
-.link-margin { margin: 15px; }
-.link-margin > div { margin: 10px auto 10px auto; }
+.padding { padding: 15px; }
+.padding-vert {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.padding-vert-more {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
-.sidebar {
-    display: none;
+/* Vertical separator for sidebar */
+.vert_line {
+    width: 1px;
+    background-color: grey;
+    left: 33%;
+    position: absolute;
+    z-index: 10;
+    top: 0px;
+    bottom: 0px;
 }
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
-}
+
+/* Force inline */
+.inline { display: inline; }
