refactored html pages into angular fragments

--- a/public/assignment/views/page/page-new.view.client.html
+++ b/public/assignment/views/page/page-new.view.client.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <div class="hidden-xs">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="row">
 
       <div class="col-xs-4 container-fluid">
         <div class="navbar-brand">
-          <a href="page-list.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a href="page-list.view.client.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Pages</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="page-new.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="page-new.view.client.html"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
 
@@ -27,7 +17,7 @@
           <a class="navbar-link" href="#">New Page</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+          <a class="navbar-link" href="page-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
 
@@ -39,11 +29,11 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand">
-        <a href="page-list.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a href="page-list.view.client.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
         <a class="navbar-link" href="#">New Page</a>
       </div>
       <p class="navbar-text pull-right">
-        <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+        <a class="navbar-link" href="page-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
       </p>
     </div>
   </nav>
@@ -57,24 +47,24 @@
     <div class="hidden-xs col-xs-4">
       <div class="container-fluid padding">
         <div class="padding-vert">
-          <a href="../widget/widget-list.html">Blog Post</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../widget/widget-list.view.client.html">Blog Post</a>
+          <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget/widget-list.html">Blogs</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../widget/widget-list.view.client.html">Blogs</a>
+          <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget/widget-list.html">Home</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../widget/widget-list.view.client.html">Home</a>
+          <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget/widget-list.html">About</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../widget/widget-list.view.client.html">About</a>
+          <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget/widget-list.html">Contact Us</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../widget/widget-list.view.client.html">Contact Us</a>
+          <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
       </div>
     </div>
@@ -96,11 +86,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
-
-
-</body>
-</html>
