--- a/public/assignment/views/widget/widget-choose.view.client.html
+++ b/public/assignment/views/widget/widget-choose.view.client.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand">
-      <a href="widget-list.html" class="navbar-link"><span
+      <a href="widget-list.view.client.html" class="navbar-link"><span
           class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="navbar-link" href="#">Choose Widget</a>
     </div>
@@ -21,7 +11,7 @@
 <div class="container-fluid padding">
   <div class="padding-vert">
     <a href="#">Header</a>
-    <a class="pull-right" href="widget-heading.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+    <a class="pull-right" href="widget-heading.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
     <a href="#">Label</a>
@@ -45,11 +35,11 @@
   </div>
   <div class="padding-vert">
     <a href="#">Image</a>
-    <a class="pull-right" href="widget-image.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+    <a class="pull-right" href="widget-image.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
     <a href="#">YouTube</a>
-    <a class="pull-right" href="widget-youtube.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+    <a class="pull-right" href="widget-youtube.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
     <a href="#">Data Table</a>
@@ -64,10 +54,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
-
-</body>
-</html>
