--- a/public/assignment/views/widget/widget-heading.view.client.html
+++ b/public/assignment/views/widget/widget-heading.view.client.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a href="widget-list.html" class="navbar-link"><span
+          <a href="widget-list.view.client.html" class="navbar-link"><span
               class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Widget Edit</a>
         </div>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="widget-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+          <a class="navbar-link" href="widget-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
     </div>
@@ -40,16 +30,13 @@
     <label for="size">Size</label>
     <input type="text" class="form-control" id="size" value="3">
   </div>
-  <a href="widget-list.html" class="btn btn-danger btn-block">Delete</a>
+  <a href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
-
-</body>
-</html>
