--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a href="../page/page-list.html" class="navbar-link"><span
+          <a href="../views/page/page-list.view.client.html" class="navbar-link"><span
               class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Widgets</a>
         </div>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="widget-choose.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="widget-choose.view.client.html"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
     </div>
@@ -32,13 +22,13 @@
 
   <div class="padding-vert-more">
     <span class="glyphicon glyphicon-align-justify pull-right"></span>
-    <a class="pull-right" href="widget-heading.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <a class="pull-right" href="widget-heading.view.client.html"><span class="glyphicon glyphicon-cog"></span></a>
     <h1 class="inline">Heading</h1>
   </div>
 
   <div class="padding-vert-more">
     <span class="glyphicon glyphicon-align-justify pull-right"></span>
-    <a class="pull-right" href="widget-image.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <a class="pull-right" href="widget-image.view.client.html"><span class="glyphicon glyphicon-cog"></span></a>
     <img src="http://i.imgur.com/n5RkuUL.jpg" width="300">
   </div>
 
@@ -71,7 +61,7 @@
 
   <div class="padding-vert-more">
     <span class="glyphicon glyphicon-align-justify pull-right"></span>
-    <a class="pull-right" href="widget-youtube.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <a class="pull-right" href="widget-youtube.view.client.html"><span class="glyphicon glyphicon-cog"></span></a>
     <iframe width="300" src="https://www.youtube.com/embed/L4GrDOOIIbk" frameborder="0" allowfullscreen></iframe>
   </div>
 
@@ -117,12 +107,9 @@
       </div>
       <div class="col-xs-6">
         <div class="navbar-text pull-right">
-          <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+          <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
         </div>
       </div>
     </div>
   </div>
 </nav>
-
-</body>
-</html>
