--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
         <a class="navbar-brand" href="#">Profile</a>
@@ -40,9 +30,9 @@
   </form>
 
   <a class="btn btn-primary btn-block"
-     href="../website/website-list.html">Websites</a>
+     href="../website/website-list.view.client.html">Websites</a>
   <a class="btn btn-danger  btn-block"
-     href="login.html">Logout</a>
+     href="login.view.client.html">Logout</a>
 
 </div>
 
@@ -53,6 +43,3 @@
     </div>
   </div>
 </nav>
-
-</body>
-</html>
