--- a/public/assignment/views/website/website-new.view.client.html
+++ b/public/assignment/views/website/website-new.view.client.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
-</head>
-<body>
-
 <div class="hidden-xs">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="row">
@@ -15,10 +5,10 @@
       <div class="col-xs-4 container-fluid">
         <div class="navbar-brand">
           <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="website-list.html">Websites</a>
+          <a class="navbar-link" href="website-list.view.client.html">Websites</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="website-new.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="website-new.view.client.html"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
 
@@ -27,7 +17,7 @@
           <a class="navbar-link" href="#">New Website</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="website-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+          <a class="navbar-link" href="website-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
 
@@ -40,10 +30,10 @@
     <div class="container-fluid">
       <div class="navbar-brand">
         <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="navbar-link" href="website-list.html">New Website</a>
+        <a class="navbar-link" href="website-list.view.client.html">New Website</a>
       </div>
       <p class="navbar-text pull-right">
-        <a class="navbar-link" href=website-list.html><span class="glyphicon glyphicon-ok"></span></a>
+        <a class="navbar-link" href=website-list.view.client.html><span class="glyphicon glyphicon-ok"></span></a>
       </p>
     </div>
   </nav>
@@ -56,20 +46,20 @@
     <div class="hidden-xs col-xs-4">
       <div class="container-fluid padding">
         <div class="padding-vert">
-          <a href="../page/page-list.html">Address Book App</a>
-          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../views/page/page-list.view.client.html">Address Book App</a>
+          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../page/page-list.html">Blogger</a>
-          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../views/page/page-list.view.client.html">Blogger</a>
+          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../page/page-list.html">Blogging App</a>
-          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../views/page/page-list.view.client.html">Blogging App</a>
+          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../page/page-list.html">Script Testing App</a>
-          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../views/page/page-list.view.client.html">Script Testing App</a>
+          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
       </div>
     </div>
@@ -91,10 +81,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
-
-</body>
-</html>
