controller syntax and some routing edits

--- a/public/assignment/views/user/login.view.client.html
+++ b/public/assignment/views/user/login.view.client.html
@@ -8,8 +8,8 @@
            class="form-control"
            placeholder="password"/>
     <a class="btn btn-primary btn-block"
-       href="profile.view.client.html">Login</a>
+       href="#/user/123">Login</a>
     <a class="btn btn-success btn-block"
-       href="register.view.client.html">Register</a>
+       href="#/register">Register</a>
   </div>
 </div>
