--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -1,45 +1,57 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#">Profile</a>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="#"><span class="glyphicon glyphicon-ok"></span></a>
+            <a ng-click="model.updateUser(model.user.username, model.user.firstName, model.user.lastName)"
+                    class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
-  </div>
+    </div>
 </nav>
 
 <div class="container-fluid">
-  <h1>Profile</h1>
+    <h1>Profile</h1>
 
-  <form>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
-    </div>
-    <div class="form-group">
-      <label for="first-name">First Name</label>
-      <input type="text" class="form-control" id="first-name" placeholder="Alice">
-    </div>
-    <div class="form-group">
-      <label for="last-name">Last Name</label>
-      <input type="text" class="form-control" id="last-name" placeholder="Wonderland">
-    </div>
-  </form>
+    <form>
+        <!--Username-->
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input ng-model="model.user.username" type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <!--Email address-->
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
+        </div>
+        <!--First Name-->
+        <div class="form-group">
+            <label for="first-name">First Name</label>
+            <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name" placeholder="Alice">
+        </div>
+        <!--Last Name-->
+        <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name"
+                   placeholder="Wonderland">
+        </div>
+    </form>
 
-  <a class="btn btn-primary btn-block"
-     href="../website/website-list.view.client.html">Websites</a>
-  <a class="btn btn-danger  btn-block"
-     href="login.view.client.html">Logout</a>
+    <!--model.error-->
+    <div ng-show="model.error" class="alert alert-danger" role="alert">
+        {{model.error}}
+    </div>
+    <!--Websites Button-->
+    <a class="btn btn-primary btn-block"
+       href="../website/website-list.view.client.html">Websites</a>
+    <!--Logout Button-->
+    <a class="btn btn-danger  btn-block"
+       href="login.view.client.html">Logout</a>
 
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-text pull-right">
-      <a href="/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+    <div class="container-fluid">
+        <div class="navbar-text pull-right">
+            <a href="/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+        </div>
     </div>
-  </div>
 </nav>
