--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -1,16 +1,19 @@
 <div class="container-fluid">
-  <h1>Register</h1>
-  <input type="text"
-         class="form-control"
-         placeholder="username"/>
-  <input type="password"
-         class="form-control"
-         placeholder="password"/>
-  <input type="password"
-         class="form-control"
-         placeholder="very password"/>
-  <a class="btn btn-primary btn-block"
-     href="profile.view.client.html">Register</a>
-  <a class="btn btn-danger btn-block"
-     href="login.view.client.html">Cancel</a>
+    <h1>Register</h1>
+    <!--username-->
+    <input type="text"
+           class="form-control"
+           placeholder="username"/>
+    <!--password-->
+    <input type="password"
+           class="form-control"
+           placeholder="password"/>
+    <!--verify password-->
+    <input type="password"
+           class="form-control"
+           placeholder="verify password"/>
+    <a class="btn btn-primary btn-block"
+       href="profile.view.client.html">Register</a>
+    <a class="btn btn-danger btn-block"
+       href="login.view.client.html">Cancel</a>
 </div>
