implemented register controller and view functionality

--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -44,14 +44,14 @@
        href="../website/website-list.view.client.html">Websites</a>
     <!--Logout Button-->
     <a class="btn btn-danger  btn-block"
-       href="login.view.client.html">Logout</a>
+       href="#/login">Logout</a>
 
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+            <a href="#/user/{{model.user._id}}"><span class="glyphicon glyphicon-user"></span></a>
         </div>
     </div>
 </nav>
