implemented website controller and view functionality

--- a/public/assignment/views/website/website-new.view.client.html
+++ b/public/assignment/views/website/website-new.view.client.html
@@ -1,23 +1,25 @@
+<!-- Split Header for Wider Devices----------------------------------------- -->
 <div class="hidden-xs">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="row">
 
       <div class="col-xs-4 container-fluid">
         <div class="navbar-brand">
-          <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="website-list.view.client.html">Websites</a>
+          <a href="#/user/{{model.userId}}/website" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link">Websites</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="website-new.view.client.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="#/user/{{model.userId}}/website/new"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
 
       <div class="col-xs-8 container-fluid">
         <div class="navbar-brand">
-          <a class="navbar-link" href="#">New Website</a>
+          <a class="navbar-link">New Website</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="website-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
+          <!--create website-->
+          <a ng-click="model.createWebsite(model.name, model.description)" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
 
@@ -25,15 +27,17 @@
   </nav>
 </div>
 
+<!-- Non-Split Header for Smaller Devices----------------------------------- -->
 <div class="visible-xs">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand">
-        <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="navbar-link" href="website-list.view.client.html">New Website</a>
+        <a href="#/user/{{model.userId}}/website" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="navbar-link">New Website</a>
       </div>
       <p class="navbar-text pull-right">
-        <a class="navbar-link" href=website-list.view.client.html><span class="glyphicon glyphicon-ok"></span></a>
+        <!--create website-->
+        <a ng-click="model.createWebsite(model.name, model.description)" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
       </p>
     </div>
   </nav>
@@ -45,33 +49,24 @@
   <div class="row">
     <div class="hidden-xs col-xs-4">
       <div class="container-fluid padding">
-        <div class="padding-vert">
-          <a href="../views/page/page-list.view.client.html">Address Book App</a>
-          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-        </div>
-        <div class="padding-vert">
-          <a href="../views/page/page-list.view.client.html">Blogger</a>
-          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-        </div>
-        <div class="padding-vert">
-          <a href="../views/page/page-list.view.client.html">Blogging App</a>
-          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-        </div>
-        <div class="padding-vert">
-          <a href="../views/page/page-list.view.client.html">Script Testing App</a>
-          <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+
+        <div ng-repeat="website in model.websites" class="padding-vert">
+          <a href="#/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a>
+          <a class="pull-right" href="#/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
       </div>
     </div>
 
     <div class="col-xs-12 col-sm-8 padding">
+      <!--name-->
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Name">
+        <input ng-model="model.name" type="text" class="form-control" id="name" placeholder="Name">
       </div>
+      <!--description-->
       <div class="form-group">
         <label for="description">Description</label>
-        <textarea class="form-control" id="description" placeholder="Description" rows="5"></textarea>
+        <textarea ng-model="model.description" class="form-control" id="description" placeholder="Description" rows="5"></textarea>
       </div>
     </div>
 
@@ -81,7 +76,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
