--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Profile</a>
+        <a class="navbar-brand">Profile</a>
         <p class="navbar-text pull-right">
             <a ng-click="model.updateUser(model.user.username, model.user.firstName, model.user.lastName)"
                     class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
@@ -41,7 +41,7 @@
     </div>
     <!--Websites Button-->
     <a class="btn btn-primary btn-block"
-       href="../website/website-list.view.client.html">Websites</a>
+       href="#/user/{{model.user._id}}/website">Websites</a>
     <!--Logout Button-->
     <a class="btn btn-danger  btn-block"
        href="#/login">Logout</a>
