--- a/public/assignment/views/website/website-list.view.client.html
+++ b/public/assignment/views/website/website-list.view.client.html
@@ -3,13 +3,13 @@
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a href="../views/user/profile.view.client.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="#">Websites</a>
+          <a href="#/user/{{model.userId}}" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link">Websites</a>
         </div>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="website-new.view.client.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="#/user/{{model.userId}}/website/new"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
     </div>
@@ -18,21 +18,9 @@
 
 
 <div class="container-fluid padding">
-  <div class="padding-vert">
-    <a href="../views/page/page-list.view.client.html">Address Book App</a>
-    <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../views/page/page-list.view.client.html">Blogger</a>
-    <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../views/page/page-list.view.client.html">Blogging App</a>
-    <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../views/page/page-list.view.client.html">Script Testing App</a>
-    <a class="pull-right" href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  <div ng-repeat="website in model.websites" class="padding-vert">
+    <a href="#/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a>
+    <a class="pull-right" href="#/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
 </div>
 
@@ -40,7 +28,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
