--- a/public/assignment/views/page/page-list.view.client.html
+++ b/public/assignment/views/page/page-list.view.client.html
@@ -1,50 +1,41 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-6 navbar-header">
-        <div class="navbar-brand">
-          <a href="../website/website-list.view.client.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="../website/website-list.view.client.html">Pages</a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-6 navbar-header">
+                <div class="navbar-brand">
+                    <!--Back button-->
+                    <a href="#/user/{{model.userId}}/website" class="navbar-link"><span
+                            class="glyphicon glyphicon-chevron-left"></span></a>
+                    <a class="navbar-link">Pages</a>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <p class="navbar-text pull-right">
+                    <!--New page button-->
+                    <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new" navbar-link"><span
+                        class="glyphicon glyphicon-plus"></span></a>
+                </p>
+            </div>
         </div>
-      </div>
-      <div class="col-xs-6">
-        <p class="navbar-text pull-right">
-          <a href="page-new.view.client.html" navbar-link"><span class="glyphicon glyphicon-plus"></span></a>
-        </p>
-      </div>
     </div>
-  </div>
 </nav>
 
 
 <div class="container-fluid padding">
-  <div class="padding-vert">
-    <a href="../widget/widget-list.view.client.html">Blog Post</a>
-    <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../widget/widget-list.view.client.html">Blogs</a>
-    <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../widget/widget-list.view.client.html">Home</a>
-    <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../widget/widget-list.view.client.html">About</a>
-    <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="../widget/widget-list.view.client.html">Contact Us</a>
-    <a class="pull-right" href="page-edit.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
+    <div ng-repeat="page in model.pages" class="padding-vert">
+        <!-- name of page -> link to widget-list-->
+        <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">{{page.name}}</a>
+        <!-- cog -> link to edit page-->
+        <a class="pull-right" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}"><span class="glyphicon glyphicon-cog"></span></a><br>
+    </div>
 </div>
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-text pull-right">
-      <a href="../user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
+    <div class="container-fluid">
+        <div class="navbar-text pull-right">
+            <!--Go to profile-->
+            <a href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a>
+        </div>
     </div>
-  </div>
 </nav>
