--- a/public/assignment/views/widget/widget-choose.view.client.html
+++ b/public/assignment/views/widget/widget-choose.view.client.html
@@ -1,60 +1,31 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <a href="widget-list.view.client.html" class="navbar-link"><span
-          class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="navbar-link" href="#">Choose Widget</a>
+    <div class="container-fluid">
+        <div class="navbar-brand">
+            <!--Back button to widget list-->
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="navbar-link"><span
+                    class="glyphicon glyphicon-chevron-left"></span></a>
+            <a class="navbar-link">Choose Widget</a>
+        </div>
     </div>
-  </div>
 </nav>
 
 <div class="container-fluid padding">
-  <div class="padding-vert">
-    <a href="#">Header</a>
-    <a class="pull-right" href="widget-heading.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Label</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">HTML</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Text Input</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Link</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Button</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Image</a>
-    <a class="pull-right" href="widget-image.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">YouTube</a>
-    <a class="pull-right" href="widget-youtube.view.client.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Data Table</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
-  <div class="padding-vert">
-    <a href="#">Repeater</a>
-    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
-  </div>
+    <div class="padding-vert">
+        <a ng-click="model.createWidget('HEADER')">Header</a>
+    </div>
+    <div class="padding-vert">
+        <a ng-click="model.createWidget('IMAGE')">Image</a>
+    </div>
+    <div class="padding-vert">
+        <a ng-click="model.createWidget('YOUTUBE')">Youtube</a>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-text pull-right">
-      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
+    <div class="container-fluid">
+        <!--Go to profile-->
+        <div class="navbar-text pull-right">
+            <a href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a>
+        </div>
     </div>
-  </div>
 </nav>
