--- a/public/assignment/views/widget/widget-image.view.client.html
+++ b/public/assignment/views/widget/widget-image.view.client.html
@@ -1,51 +1,29 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-6 navbar-header">
-        <div class="navbar-brand">
-          <a href="widget-list.view.client.html" class="navbar-link"><span
-              class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="#">Widget Edit</a>
-        </div>
-      </div>
-      <div class="col-xs-6">
-        <p class="navbar-text pull-right">
-          <a class="navbar-link" href="widget-list.view.client.html"><span class="glyphicon glyphicon-ok"></span></a>
-        </p>
-      </div>
-    </div>
-  </div>
-</nav>
-
 <div class="container-fluid padding">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" id="name">
-  </div>
-  <div class="form-group">
-    <label for="title">Text</label>
-    <input type="text" class="form-control" id="title">
-  </div>
-  <div class="form-group">
-    <label for="url">URL</label>
-    <input type="text" class="form-control" id="url" value="www.google.com">
-  </div>
-  <div class="form-group">
-    <label for="width">Width</label>
-    <input type="text" class="form-control" id="width" value="100%">
-  </div>
-  <div class="form-group">
-    <label for="upload">Upload</label>
-    <input type="file" class="form-control" id="upload">
-  </div>
-  <a href="#" class="btn btn-primary btn-block">Upload Image</a>
-  <a href="widget-list.view.client.html" class="btn btn-danger btn-block">Delete</a>
-</div>
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
-    <div class="navbar-text pull-right">
-      <a href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user"></span></a>
+    <!--imageName-->
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input ng-model="model.widget.name" type="text" class="form-control" id="name" placeholder="Name">
     </div>
-  </div>
-</nav>
+    <!--imageText-->
+    <div class="form-group">
+        <label for="title">Text</label>
+        <input ng-model="model.widget.text" type="text" class="form-control" id="title" placeholder="Text">
+    </div>
+    <!--imageURL-->
+    <div class="form-group">
+        <label for="url">URL</label>
+        <input ng-model="model.widget.url" type="text" class="form-control" id="url" placeholder="www.google.com">
+    </div>
+    <!--imageWidth-->
+    <div class="form-group">
+        <label for="width">Width</label>
+        <input ng-model="model.widget.width" type="text" class="form-control" id="width" placeholder="100%">
+    </div>
+    <!--Not functional for now-->
+    <div class="form-group">
+        <label for="upload">Upload</label>
+        <input type="file" class="form-control" id="upload">
+    </div>
+    <a class="btn btn-primary btn-block">Upload Image</a>
+    <a ng-click="model.deleteWidget()" class="btn btn-danger btn-block">Delete</a>
+</div>
