--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -20,7 +20,7 @@
         {{model.error}}
     </div>
     <!--Register button-->
-    <a ng-click="model.register(model.username, model.password, model.verifyPassword)"
+    <a ng-click="model.register()"
        class="btn btn-primary btn-block"
     >Register</a>
     <!--Cancel button-->
